# bWebsockets

./: .gitignore  CMakeLists.txt  README.md
1c/admin/b1cadmin/WebSocketTests/: .project
1c/admin/b1cadmin/WebSocketTests/src/Catalogs/ВнешниеПользователи/: ВнешниеПользователи.mdo
1c/admin/b1cadmin/WebSocketTests/src/Catalogs/Номенклатура/: Номенклатура.mdo
1c/admin/b1cadmin/WebSocketTests/src/Catalogs/Организации/: Организации.mdo
1c/admin/b1cadmin/WebSocketTests/src/Catalogs/Подразделения/: Подразделения.mdo
1c/admin/b1cadmin/WebSocketTests/src/Catalogs/Пользователи/: ObjectModule.bsl  Пользователи.mdo
1c/admin/b1cadmin/WebSocketTests/src/Catalogs/РабочиеМеста/: РабочиеМеста.mdo
1c/admin/b1cadmin/WebSocketTests/src/Catalogs/Склады/: Склады.mdo
1c/admin/b1cadmin/WebSocketTests/src/Configuration/: ClientApplicationInterface.cai  Configuration.mdo  ManagedApplicationModule.bsl  SessionModule.bsl
1c/admin/data/: 1Cv8.1CD
arcirk/: CMakeLists.txt  arcirk.hpp  beast.hpp  database_struct.hpp  includes.hpp  net.hpp  query_builder.hpp  shared_struct.hpp
arcirk/src/: arcirk.cpp  arcirk_base64.cpp  arcirk_cmd_parser.cpp  arcirk_crypter.cpp  arcirk_ip.cpp  arcirk_static.cpp
client/: CMakeLists.txt
client/console/: CMakeLists.txt  main.cpp
client/include/: callbacks.hpp  client.hpp  session.hpp  shared_state.hpp
client/src/: client.cpp  shared_state.cpp
html_client/: chat_client.html  index.html
http_client/: CMakeLists.txt
http_client/console/: CMakeLists.txt  main.cpp
http_client/include/: http_session.hpp
server/: CMakeLists.txt  main.cpp
server/1c/bsl/:  barcode_upload.bsl  barcode_upload.bsl  get_barcode_information.bsl  unloading_items.bsl
server/include/: com.hpp  command_list.hpp  http.hpp  http_session.hpp  http_sync_client.hpp  listener.hpp  scheduled_operations.hpp  services.hpp  shared_state.hpp  types.hpp  websocket_session.hpp
server/src/: mkcert.c  scheduled_operations.cpp  shared_state.cpp
src/: CMakeLists.txt
src/1c/admin/b1cadmin/WebSocketTests/src/CommonForms/ФормаНастройкиСервера/: Form.form  ФормаНастройкиСервера.mdo
src/1c/admin/b1cadmin/WebSocketTests/src/CommonModules/ВебСокетСервер/: Module.bsl  ВебСокетСервер.mdo
src/1c/admin/b1cadmin/WebSocketTests/src/Configuration/: Configuration.mdo  ManagedApplicationModule.bsl
src/1c/admin/b1cadmin/WebSocketTests/src/Constants/ДатресHttpСервиса/: ДатресHttpСервиса.mdo
src/1c/admin/b1cadmin/WebSocketTests/src/Constants/ИмяАдминистратораСервера/: ИмяАдминистратораСервера.mdo
src/1c/admin/b1cadmin/WebSocketTests/src/Constants/РазрешитьИспользованиеВебСокет/: РазрешитьИспользованиеВебСокет.mdo
src/1c/admin/b1cadmin/WebSocketTests/src/Constants/ТребуетсяАвторизацияНаСервере/: ТребуетсяАвторизацияНаСервере.mdo
src/1c/admin/b1cadmin/WebSocketTests/src/Roles/ПолныеПрава/: ПолныеПрава.mdo
src/1c/admin/b1cadmin/WebSocketTests/src/Subsystems/Сервер/Subsystems/Администрирование/: Администрирование.mdo
src/1c/admin/data/: 1Cv8.1CD  1Cv8tmp.1CD
src/arcirk/: CMakeLists.txt  arcirk.hpp  beast.hpp  net.hpp
src/arcirk/common/: server_certificate.hpp
src/arcirk/src/: arcirk.cpp  arcirk_bconf.cpp  arcirk_json.cpp  arcirk_static.cpp
src/client/: CMakeLists.txt  main.cpp
src/client/console/: CMakeLists.txt  main.cpp
src/client/http/: chat_client.html
src/client/include/: bclient.h  bclient.hpp  callbacks.h  callbacks.hpp  client.h  client.hpp  iclient.h  iws_client.h  session.h  session_base.hpp  session_ssl.h  shared_state.hpp  websocket_client.hpp  ws_client.h
src/client/old/include/: bclient.h  client.h  client_certificates.hpp  session.h
src/client/old/src/: bclient.cpp  client.cpp  session.cpp  session_ssl.cpp
src/client/src/: bclient.cpp  client.cpp  iclient.cpp  iws_client.cpp  session.cpp  session_ssl.cpp  shared_state.cpp  ws_client.cpp
src/client/tests/: CMakeLists.txt  websocket_client_async_ssl.cpp
src/client_new/: CMakeLists.txt  client.hpp  session.hpp
src/client_new/console/: CMakeLists.txt  main.cpp
src/client_new/include/: authorization.hpp  client.hpp  client_transport.hpp  root_certificates.hpp  session.hpp
src/client_new/src/: client.cpp
src/client_test/: CMakeLists.txt  client.hpp  session.hpp  shared_state.cpp  shared_state.hpp
src/client_test/console/: CMakeLists.txt  main.cpp
src/client_test/include/: client.hpp  session.hpp  shared_state.hpp
src/client_test/src/: client.cpp  shared_state.cpp
src/server/: CMakeLists.txt  main.cpp
src/server/include/: database_struct.hpp  db_pool.hpp  http_session.hpp  http_session_ssl.hpp  listener.hpp  listener_ssl.hpp  server_certificate.hpp  session_base.hpp  shared_state.hpp  subscriber.hpp  table_users.hpp  websocket_session.hpp  websocket_session_ssl.hpp
src/server/src/: http_session.cpp  http_session1.cpp  http_session_ssl.cpp  listener.cpp  listener_ssl.cpp  shared_state.cpp  subscriber.cpp  websocket_session.cpp  websocket_session_ssl.cpp
src/server/tests/: CMakeLists.txt  websocket_server_async_ssl.cpp
src/server_new/: CMakeLists.txt  main.cpp  server.hpp
src/server_new/include/: http_session.hpp  listener.hpp  server.hpp  shared_state.hpp  websocket_session.hpp
src/server_new/src/: shared_state.cpp
src/server_test/: CMakeLists.txt  main.cpp  shared_state.cpp  shared_state.hpp  websocket_session.hpp
src/wsClient/: CMakeLists.txt
src/wsClient/include/: Component.h  stdafx.h  webcore.h
src/wsClient/src/: exports.cpp  webcore.cpp
src/wscore/: _CMakeLists.txt
src/wscore/include/: webcore.h
src/wscore/src/: webcore.cpp
ssl/: README.md  arcirk.local.crt  arcirk.local.key  cert.conf  ssl_gen.sh
task/: CMakeLists.txt  main.cpp
task/lib/: CMakeLists.txt
task/lib/include/: task.hpp  thread_pool.hpp
task/lib/src/: main.cpp
tests/database/: CMakeLists.txt  main.cpp
tests/mail/: CMakeLists.txt  main.cpp
wdc/: CMakeLists.txt
wdc/src/: urn.cpp
web_admin/waAdmin/: PageStart.qml  main.qml  qml.qrc  waAdmin.pro
ws_addin/: CMakeLists.txt
ws_addin/include/: Component.h  webcore.h
ws_addin/src/: Component.cpp  webcore.cpp
(+131 files in other folders)
